EO-260 Discount promotion should display at shopping cart page, personal information page, and thank you page

--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -79,15 +79,49 @@
             app:layout_constraintTop_toBottomOf="@+id/cartDescriptionTextView" />
 
         <LinearLayout
+            android:id="@+id/layout_discount_shopping_cart"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:paddingEnd="8dp"
+            android:paddingStart="8dp"
+            app:layout_constraintBottom_toTopOf="@id/layout_total_shopping_cart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guideline">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/label_discount_text_view"
+                style="@style/textNameProduct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/discount"
+                android:textSize="18sp" />
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_discount_shopping_cart"
+                style="@style/textNameProduct"
+                android:textColor="@color/dangerColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:textSize="18sp"
+                tools:text="-2,000" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/layout_total_shopping_cart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:gravity="end"
             android:orientation="horizontal"
-            android:padding="8dp"
+            android:paddingEnd="8dp"
+            android:paddingStart="8dp"
             app:layout_constraintBottom_toTopOf="@id/payment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guideline">
