--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -665,85 +665,105 @@
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp" />
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:id="@+id/amountLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="16dp"
-                android:paddingTop="16dp"
-                android:visibility="visible">
+                android:layout_marginTop="16dp">
 
                 <View
+                    android:id="@+id/amountLine"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    app:layout_constraintTop_toTopOf="parent"
                     android:background="@color/graySelect" />
 
-                <android.support.constraint.ConstraintLayout
-                    android:layout_width="match_parent"
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline80"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp">
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.775" />
 
-                    <android.support.constraint.Guideline
-                        android:id="@+id/guideline80"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.77" />
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/total_order_success"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/total"
+                    android:layout_marginTop="16dp"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/amountLine" />
 
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        android:id="@+id/total_order_success"
-                        style="@style/TextAppearance.AppCompat.Medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:text="@string/total"
-                        android:textSize="16sp"
-                        app:layout_constraintEnd_toStartOf="@+id/guideline80" />
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/discount_order_success"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/discount"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/total_order_success" />
 
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        android:id="@+id/delivery_price_order_success"
-                        style="@style/TextAppearance.AppCompat.Medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="@string/delivery_price"
-                        android:textSize="16sp"
-                        app:layout_constraintEnd_toStartOf="@+id/guideline80"
-                        app:layout_constraintTop_toBottomOf="@+id/total_order_success" />
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/delivery_price_order_success"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/delivery_price"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/discount_order_success" />
 
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        android:id="@+id/txt_total_order_success"
-                        style="@style/TextAppearance.AppCompat.Medium"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:textColor="@color/blackText"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/guideline80"
-                        tools:text="4,404" />
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_total_order_success"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/blackText"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/amountLine"
+                    tools:text="4,404" />
 
-                    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                        android:id="@+id/txt_delivery_price_order_success"
-                        style="@style/TextAppearance.AppCompat.Medium"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:textColor="@color/blackText"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/guideline80"
-                        app:layout_constraintTop_toBottomOf="@+id/txt_total_order_success"
-                        tools:text="0" />
 
-                </android.support.constraint.ConstraintLayout>
-            </LinearLayout>
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_discount_order_success"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/dangerColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_total_order_success"
+                    tools:text="0" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_delivery_price_order_success"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/blackText"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_discount_order_success"
+                    tools:text="0" />
+            </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
