--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -654,7 +654,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/graySelect" />
+                android:background="@color/lightGray" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_order_detail_list"
@@ -662,7 +662,6 @@
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:overScrollMode="never"
-                android:paddingBottom="8dp"
                 android:paddingTop="8dp" />
 
             <android.support.constraint.ConstraintLayout
@@ -676,7 +675,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:background="@color/graySelect" />
+                    android:background="@color/lightGray" />
 
                 <android.support.constraint.Guideline
                     android:id="@+id/guideline80"
