--- a/app/src/main/res/layout/item_stores_2h.xml
+++ b/app/src/main/res/layout/item_stores_2h.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_item"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    android:paddingStart="16dp">
+    android:layout_height="wrap_content">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/storeNameTextView"
         style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:paddingTop="16dp"
@@ -23,6 +23,7 @@
         android:id="@+id/deliveryTextView"
         android:layout_width="match_parent"
         style="@style/TextAppearance.AppCompat.Small"
+        android:layout_marginStart="16dp"
         android:layout_height="wrap_content"
         tools:text="@string/store_address"
         app:layout_constraintTop_toBottomOf="@+id/storeNameTextView" />
