--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="disableButton">#f2f2f2</color>
     <color name="disableInput">#40e7e7e7</color>
     <color name="white80">#b9ffffff</color>
+    <color name="extraGray">#FAFAFA</color>
     <color name="gray">#e0e0e0</color>
     <color name="lightGray">#e7e7e7</color>
     <color name="lightGray2">#bfbfbf</color>
