EO-295 Implement firebase remote config and setup remote config with payment options with pwb and cds

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,12 @@
     <style name="textHead">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/textDefaultColor</item>
+    </style>
+
+    <style name="textHeader">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/defaultButtonColor</item>
     </style>
 
