--- a/app/src/main/res/layout/list_item_pay_at_store.xml
+++ b/app/src/main/res/layout/list_item_pay_at_store.xml
@@ -16,14 +16,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/tv_pay_at_store"
+        app:layout_constraintBottom_toTopOf="@id/tv_description"
         app:layout_constraintEnd_toStartOf="@+id/choose_payment_method"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Full Payment" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tv_pay_at_store"
+        android:id="@+id/tv_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -57,7 +57,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="@color/graySelect"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pay_at_store"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
