--- a/app/src/cds/res/xml/remote_config_defaults.xml
+++ b/app/src/cds/res/xml/remote_config_defaults.xml
@@ -11,4 +11,8 @@
         <value>fullpaymentredirect,payatstore,p2c2p_ipp,e_ordering</value>
     </entry>
 
+    <entry>
+        <key>supported_delivery_methods</key>
+        <value>express,standard,pickupatstore,hdl</value>
+    </entry>
 </defaultsMap>
