--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -822,6 +822,17 @@
                     tools:text="0" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/delivery_price_order_success"
+                    style="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/delivery_price"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/discount_order_success" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/txt_delivery_price_order_success"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
