Fixed bug T1 changing on payment page

--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -284,7 +284,31 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
                     android:textSize="16sp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/t1cLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/tvTheOneNumberLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/label_the_one_number"
+                    android:textSize="16sp"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/tvTheOneNumber"
+                    style="@style/descriptionProduct"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <View
