EO-327 Implement sharing bottom sheet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -80,4 +80,8 @@
 
     <!-- tab color item freebie -->
     <color name="itemFreebieTabColor">@color/colorPrimary</color>
+
+    <!-- Sharing -->
+    <color name="line_app">#00b900</color>
+
 </resources>
