--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,5 @@
     <dimen name="margin_padding_normal">16dp</dimen>
     <dimen name="margin_padding_large">24dp</dimen>
     <dimen name="margin_padding_xlarge">32dp</dimen>
+    <dimen name="share_menu_size">80dp</dimen>
 </resources>
