EO-288 Implement firebase remote config with function get personal detail by hdl service

--- a/app/src/pwb/res/xml/remote_config_defaults.xml
+++ b/app/src/pwb/res/xml/remote_config_defaults.xml
@@ -11,6 +11,11 @@
     </entry>
 
     <entry>
+        <key>is_hdl_member_on</key>
+        <value>true</value>
+    </entry>
+
+    <entry>
         <key>is_payment_option_on</key>
         <value>false</value>
     </entry>
