--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:focusable="true"
         android:clickable="true"
+        android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="vertical">
 
@@ -76,8 +76,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -99,29 +99,63 @@
                     app:required="true" />
             </LinearLayout>
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/layout_earn_t1c_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
-                android:weightSum="2">
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/title_select_methods"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/guildHalf"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.5" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
-                    android:id="@+id/t1_member_no_payment"
+                    android:id="@+id/input_the1_card_id"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
                     app:header="@string/t1_member"
+                    android:layout_marginEnd="@dimen/margin_padding_small"
+                    app:layout_constraintEnd_toEndOf="@id/guildHalf"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:pwb_icon="@drawable/ic_the1"
                     app:required="false" />
-            </LinearLayout>
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/tvT1MemberName"
+                    style="@style/TextAppearance.AppCompat.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@id/input_the1_card_id"
+                    app:layout_constraintTop_toBottomOf="@+id/input_the1_card_id" />
+
+                <Button
+                    android:id="@+id/btnChangeThe1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/t1_change"
+                    app:layout_constraintBottom_toBottomOf="@+id/input_the1_card_id"
+                    app:layout_constraintStart_toEndOf="@+id/input_the1_card_id" />
+
+            </android.support.constraint.ConstraintLayout>
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@color/lightGray" />
 
         <LinearLayout
@@ -168,11 +202,11 @@
             </LinearLayout>
 
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:weightSum="2">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
                     android:id="@+id/soi_payment"
@@ -196,8 +230,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -217,15 +251,15 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     app:act_header="@string/district"
-                    app:act_required="true"/>
+                    app:act_required="true" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -245,15 +279,15 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     app:act_header="@string/post_code"
-                    app:act_required="true"/>
+                    app:act_required="true" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -270,14 +304,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/require_tax"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/require_tax" />
 
                 <RadioGroup
                     android:id="@+id/radio_tax_group"
@@ -290,7 +324,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/yes"
-                        android:theme="@style/RadioButtonStyle"/>
+                        android:theme="@style/RadioButtonStyle" />
 
                     <RadioButton
                         android:id="@+id/radio_tax_no"
@@ -298,7 +332,7 @@
                         android:layout_height="wrap_content"
                         android:checked="true"
                         android:text="@string/no"
-                        android:theme="@style/RadioButtonStyle"/>
+                        android:theme="@style/RadioButtonStyle" />
                 </RadioGroup>
             </LinearLayout>
 
@@ -334,22 +368,22 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@color/lightGray" />
 
         <LinearLayout
             android:id="@+id/billing_option_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="16dp">
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/same_billing"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:text="@string/same_billing" />
 
             <RadioGroup
                 android:id="@+id/radio_group"
@@ -363,14 +397,14 @@
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="@string/yes"
-                    android:theme="@style/RadioButtonStyle"/>
+                    android:theme="@style/RadioButtonStyle" />
 
                 <RadioButton
                     android:id="@+id/radio_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/no"
-                    android:theme="@style/RadioButtonStyle"/>
+                    android:theme="@style/RadioButtonStyle" />
             </RadioGroup>
 
         </LinearLayout>
@@ -393,8 +427,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="16dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -420,8 +454,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -474,8 +508,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -501,8 +535,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -522,15 +556,15 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     app:act_header="@string/district"
-                    app:act_required="true"/>
+                    app:act_required="true" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -550,7 +584,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     app:act_header="@string/post_code"
-                    app:act_required="true"/>
+                    app:act_required="true" />
 
             </LinearLayout>
         </LinearLayout>
@@ -592,8 +626,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="6dp"
+            android:layout_marginBottom="16dp"
             android:orientation="horizontal">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -618,7 +652,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            app:text="@string/choose_delivery_option"
-            app:icon_invisible="true"/>
+            app:icon_invisible="true"
+            app:text="@string/choose_delivery_option" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
