EO-301 Implement remote config with displaying special categories

--- a/app/src/cds/res/xml/remote_config_defaults.xml
+++ b/app/src/cds/res/xml/remote_config_defaults.xml
@@ -29,4 +29,9 @@
         <key>supported_delivery_methods</key>
         <value>express,standard,pickupatstore,hdl</value>
     </entry>
+
+    <entry>
+        <key>display_special_category_ids</key>
+        <value/>
+    </entry>
 </defaultsMap>
