--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -814,6 +814,16 @@
                     app:layout_constraintTop_toBottomOf="@+id/total_order_success" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/promotion_order_success"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/promotion_code"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/discount_order_success" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/txt_total_order_success"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -846,6 +856,22 @@
                     tools:text="0" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_promotion_order_success"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/dangerColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/guideline80"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_discount_order_success"
+                    tools:text="0" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/delivery_price_order_success"
                     style="@style/TextAppearance.AppCompat.Medium"
                     android:layout_width="wrap_content"
@@ -854,7 +880,7 @@
                     android:text="@string/delivery_price"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toStartOf="@+id/guideline80"
-                    app:layout_constraintTop_toBottomOf="@+id/discount_order_success" />
+                    app:layout_constraintTop_toBottomOf="@+id/promotion_order_success" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     android:id="@+id/txt_delivery_price_order_success"
@@ -869,8 +895,29 @@
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/guideline80"
-                    app:layout_constraintTop_toBottomOf="@+id/txt_discount_order_success"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_promotion_order_success"
                     tools:text="0" />
+
+                <android.support.constraint.Group
+                    android:id="@+id/layoutDiscount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:constraint_referenced_ids="discount_order_success,txt_discount_order_success"/>
+
+                <android.support.constraint.Group
+                    android:id="@+id/layoutCouponDiscount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:constraint_referenced_ids="promotion_order_success,txt_promotion_order_success"/>
+
+                <android.support.constraint.Group
+                    android:id="@+id/layoutDeliveryDiscount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:constraint_referenced_ids="delivery_price_order_success,txt_delivery_price_order_success"/>
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
