--- a/app/src/pwb/res/xml/remote_config_defaults.xml
+++ b/app/src/pwb/res/xml/remote_config_defaults.xml
@@ -34,4 +34,9 @@
         <key>display_special_category_ids</key>
         <value />
     </entry>
+
+    <entry>
+        <key>is_support_coupon_on</key>
+        <value>false</value>
+    </entry>
 </defaultsMap>
