EO-330 CDS - BranchesFragment fix text color branch selected

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="defaultTextButtonColor">#A6192E</color>
     <color name="defaultButtonStrokeColor">#A6192E</color>
     <color name="iconArrowBack">@color/colorAccent</color>
+    <color name="textSelectedColor">@color/colorAccent</color>
 
     <color name="toggleSelectedStroke">@color/colorAccent</color>
     <color name="toggleSelectedFill">@color/colorPrimary</color>
